criando tipos typescript
exercitando a criação de tipos com typescript

--- a/onebitcode-curso/typescript/criando-tipos/tsconfig.json
+++ b/onebitcode-curso/typescript/criando-tipos/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
-        "outDir": "public/dist"
+        "outDir": "public/dist",
+        "target": "ES2015",
+        "watch": true
     }
 }
