--- a/onebitcode-curso/typescript/criando-tipos/package.json
+++ b/onebitcode-curso/typescript/criando-tipos/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "watch": "tsc"
   },
   "keywords": [],
   "author": "",
