studying decorators with typescript

--- a/onebitcode-curso/typescript/orientacao-a-objetos-typescript/tsconfig.json
+++ b/onebitcode-curso/typescript/orientacao-a-objetos-typescript/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "ES2015",
         "outDir": "public/dist",
-        "watch": true
+        "watch": true,
+        "experimentalDecorators": true
     }
 }
